src/record/snapshots/realm__record__loc__tests__wire.snap
---
source: src/record/loc.rs
expression: wire
---
[
    3,
    114,
    104,
    111,
    4,
    104,
    111,
    115,
    116,
    7,
    101,
    120,
    97,
    109,
    112,
    108,
    101,
    3,
    99,
    111,
    109,
    0,
    0,
    29,
    0,
    1,
    0,
    1,
    81,
    128,
    0,
    16,
    0,
    37,
    22,
    19,
    137,
    22,
    203,
    60,
    143,
    60,
    239,
    33,
    0,
    152,
    133,
    80,
]
