src/record/snapshots/realm__record__loc__tests__zone.snap
---
source: src/record/loc.rs
expression: record
---
sigma.host.example.com.	86400	IN	LOC	42 21 43.952 N 71 5 6.344 W -24.00m 1.00m 200.00m 10.00m
